# hyperliquid

./: .env.example  README.md  config.toml  pyproject.toml
data/: sol_1m_sample.csv
scripts/: run_backtest.py
solbot/: __init__.py  types.py
solbot/backtest/: engine.py
solbot/config/: settings.py
solbot/connectors/: hyperliquid.py
solbot/execution/: executor.py
solbot/logging_utils/: journal.py  logger.py
solbot/market_data/: service.py
solbot/portfolio/: account.py
solbot/risk/: manager.py
solbot/runners/: core.py  live.py  paper.py
solbot/strategy/: vol_breakout.py
solbot/utils/: alerts.py  indicators.py  state_store.py
tests/: test_backtest.py  test_market_data_adapter.py  test_strategy_and_risk.py
