[project]
name = "hyperliquid-sol-vol-bot"
version = "0.1.0"
description = "Production-oriented SOL-USDT intraday volatility bot for Hyperliquid"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
